force-app/main/default/objects/Product_Recommendation__mdt/Product_Recommendation__mdt.object-meta.xml
<CustomObject>
    <label>Product Recommendation</label>
    <pluralLabel>Product Recommendations</pluralLabel>
</CustomObject>