force-app/main/default/objects/Product_Recommendation__mdt/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <inlineHelpText>The rank of the recommendation.</inlineHelpText>
    <label>Rank</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>