force-app/main/default/objects/Product_Recommendation__mdt/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <inlineHelpText>Recommendation for the product inserted in the &apos;label&apos; field.</inlineHelpText>
    <label>Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>