force-app/main/default/objects/Product_Recommendation__mdt/fields/Recommendation_Value__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Value__c</fullName>
    <label>Recommendation Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>